--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -1,391 +1,412 @@
-.home-page {
-  min-height: auto;
-  width: 100vw;
-}
-.r1 {
-  display: flex;
-  height: 70vh;
-}
-.r1-c1 {
-  width: 60%;
-  background: #f8e8fe;
-  padding: 15px 50px;
-  text-align: left;
-}
-.r1-c1 span {
-  color: #7e1cfe;
-}
-.r1-c1 h1 {
-  font-size: 40px;
-}
-.r1-c1 h2 {
-  font-size: 24px;
-  font-weight: 500;
-  margin: 30px 0;
-}
-.r1-c1 h3 {
-  font-size: 24px;
-  font-weight: 600;
-  margin: 30px 0;
-}
-.r1-c1 .input-field {
-  display: flex;
-  align-items: center;
-  height: 40px;
-  margin: -10px 0;
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
 
-.r1-c1 .input-field h3 {
-  font-size: 17px;
-  font-weight: 500;
+.fade-in-animation {
+  animation: fadeIn 1s ease-in-out;
+  animation-fill-mode: both;
+  opacity: 0;
+  transition: opacity 1s ease-in-out;
 }
-.r1-c1 .input-field input {
-  width: 150px;
+
+.home-page {
+  display: flex;
+  flex-direction: row;
+  height: auto;
+  width: 100vw;
+}
+
+.left {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  width: 90px;
+}
+
+.right {
+  margin-left: 90px;
+  width: calc(100% - 90px);
+  position: relative;
+}
+
+.header {
+  width: 100%;
+  display: flex;
+  background: #f3e9ff;
+  position: fixed;
+  top: 0;
+}
+
+.header-col-1 {
+  width: 70%;
+  display: flex;
+  justify-content: space-between;
+  padding: 12px;
+  background: #f4f4f4;
+  border-right: 1px solid #d4d3d4;
+  border-bottom: 1px solid #d4d3d4;
+}
+
+.input {
+  background: #fff;
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  width: 50%;
+  padding: 0 15px;
+  border-radius: 8px;
+}
+
+.input input {
   background: none;
   border: none;
   outline: none;
-  font-style: italic;
-  margin: 0 10px;
-  color: #7e1cfe;
-  border-bottom: 1px solid #7e1cfe;
-  font-size: 17px;
+  padding: 5px 8px;
+  font-size: 13px;
+  width: 100%;
+  letter-spacing: 1px;
 }
-.r1-c1 .input-field input:first-child {
-  margin-left: 0;
+
+.button-and-coin {
+  display: flex;
+  gap: 15px;
+  justify-content: flex-end;
+  width: 50%;
 }
-.r1-c1 .buttons button {
-  padding: 15px 25px;
-  border-radius: 15px;
-  border: 1px solid #7e1cfe;
-  outline: none;
-  cursor: pointer;
-  font-size: 18px;
-  transition: 0.3s ease-in-out;
-  margin-top: 40px;
-}
-.r1-c1 .buttons button:hover,
-.r3 .sign-up form .sign-up-buttons button:hover {
-  transform: scale(1.04);
-}
-.r1-c1 .buttons button:nth-child(1),
-.r3 .sign-up form .sign-up-buttons button:nth-child(1) {
-  background-color: #7e1cfe;
+
+.button-and-coin button {
+  background: #9452e0;
   color: #fff;
-  margin-right: 15px;
+  padding: 10px 40px;
+  border: 2px solid transparent;
+  border-radius: 20px;
+  letter-spacing: 0.5px;
+  transition: 0.3s ease-in-out;
+  cursor: pointer;
 }
-.r1-c1 .buttons button:nth-child(2),
-.r3 .sign-up form .sign-up-buttons button:nth-child(2) {
-  background-color: transparent;
-  color: #7e1cfe;
+
+.button-and-coin button:hover {
+  background: #e8def4;
+  color: #7d2adc;
+  border: 2px solid #9452e0;
 }
-.r1-c2 {
-  width: 40%;
-  background: #f8e8fe;
-  margin: 0 auto;
+
+.coins-field {
+  background: #e9dcf8;
+  padding: 4px 18px;
   display: flex;
-  justify-content: center;
+  gap: 10px;
+  border-radius: 20px;
+  align-items: center;
+  cursor: pointer;
 }
-.r1-c2 img {
-  height: 100%;
+
+.coins-field img {
+  background: #000;
+  height: 15px;
+  width: 15px;
 }
-.r2 {
-  padding: 30px 0;
-  color: #7e1cfe;
+
+.coins-field span {
+  color: red;
+}
+
+.header-col-2 {
+  width: calc(30% - 100px);
   display: flex;
-  flex-direction: column;
+  align-items: center;
   justify-content: center;
+  border-bottom: 1px solid #d4d3d4;
+  gap: 80px;
+}
+
+.header-col-2 button {
+  height: 30px;
+  width: 30px;
+}
+.head {
+  display: none;
+}
+.body {
+  margin-top: 60px;
+  padding: 15px 12px;
+}
+
+.row-1 {
+  background: #e8def4;
+  padding: 15px 20px;
+  border-radius: 15px;
+}
+
+.row-1-r1 {
+  display: flex;
+  justify-content: space-between;
   align-items: center;
 }
-.r2 h1 {
-  margin-bottom: 30px;
+
+.row-1-r1 h1 {
+  font-size: 35px;
 }
-.r2 iframe {
-  height: 50vh;
-  width: 60vw;
+
+.row-1-r1 select {
+  background: #fff;
+  border-radius: 5px;
+  border: none;
+  outline: none;
+  padding: 6px 15px;
 }
-.r3 .cards {
-  display: grid;
-  grid-template-columns: repeat(5, 1fr);
-  grid-gap: 30px;
-  padding: 50px 80px;
+
+.row-1-r2 {
+  margin: 15px 0;
+  display: flex;
 }
-.r3 .cards .card {
+
+.row-1-r2-c1,
+.row-1-r2-c2 {
+  width: 50%;
   display: flex;
   flex-direction: column;
-  border-radius: 15px;
-  padding: 30px 20px;
-  transition: 0.3s ease-in-out;
-  border: 2px solid transparent;
-  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
-.r3 .cards .card:hover {
-  transform: scale(1.02);
-  border: 2px solid #7e1cfe;
+
+.row-1-r2-c1 span {
+  font-size: 18px;
+}
+
+.row-1-r2-c1 button {
+  width: 25%;
+  padding: 8px;
+  font-size: 14px;
+  letter-spacing: 0.5px;
+  border-radius: 20px;
+  border: 2px solid #9452e0;
+  cursor: pointer;
+  margin-top: 50px;
+  background: transparent;
+  color: #7d2adc;
+  transition: 0.3s ease-in-out;
+}
+
+.row-1-r2-c1 button:hover {
+  background: #a671e3;
+  color: #fff;
+}
+
+.row-1-r2-c2 span {
+  margin: 15px 0;
+}
+
+.row-2 {
+  padding: 15px 0px;
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+}
+
+.row-2 h2 {
+  font-size: 21px;
+  margin-left: 10px;
+}
+
+.row-2 p {
+  font-size: 16px;
+  margin-left: 10px;
+}
+
+.row-3 {
+  background: #ededed;
+  padding: 10px 15px;
+  border-radius: 15px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.row-3-row .cards {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-gap: 10px;
+  margin: 10px 0;
+}
+
+.row-3-row .cards .card {
+  padding: 15px;
+  border-radius: 8px;
+  background: #fff;
+  box-shadow: rgba(0, 0, 0, 0.24) 3px 7px 8px;
+  transition: 0.3s ease-in-out;
+}
+
+.row-3-row .cards .card:hover {
   box-shadow: #7e1cfe 1px 1px 10px;
 }
 
-.r3 .cards .card img {
-  width: 60px;
-  height: 60px;
-  margin: 0 auto;
-}
-.r3 .cards .card span {
-  text-align: center;
-  margin: 15px 0;
-  font-size: 18px;
-  font-weight: 600;
+.row-3-row .cards .card .card-row-1 {
+  display: flex;
+  justify-content: space-between;
 }
 
-.r3 .cards .card p {
-  text-align: center;
+.row-3-row .cards .card .card-row-2 span {
+  font-size: 16px;
+  font-weight: 600;
+  line-height: 2;
+}
+
+.row-3-row .cards .card .card-row-2 p {
   font-size: 14px;
-}
-.r3 .text,
-.r3 .sign-up {
-  padding: 20px 20vw;
-  text-align: center;
-}
-.r3 .text h2,
-.r3 .sign-up h2 {
-  color: #7e1cfe;
-  font-size: 26px;
-  margin-bottom: 10px;
-  letter-spacing: 0.8px;
-}
-.r3 .text p {
-  font-size: 18px;
-  margin-bottom: 30px;
-}
-
-.r3 .media-cards {
-  display: grid;
-  grid-gap: 30px;
-  grid-template-columns: repeat(3, 1fr);
-  padding: 25px 15vw;
-}
-.r3 .media-cards .media-card {
-  display: flex;
-  flex-direction: column;
-  margin-bottom: 20px;
-}
-
-.r3 .media-cards .media-card img {
-  width: 100%;
-  height: 100%;
-  border-radius: 20px;
-}
-
-.r3 .media-cards .media-card span {
-  margin: 15px 0;
-  font-size: 20px;
-  position: relative;
-  font-weight: 600;
-}
-
-.r3 .media-cards .media-card span::after {
-  content: "";
-  position: absolute;
-  height: 2.5px;
-  background: #7e1cfe;
-  left: 0;
-  bottom: -6px;
-  width: 50%;
-  transition: width 0.3s ease-in-out;
-}
-
-.r3 .media-cards .media-card:hover span::after {
-  width: 100%;
-}
-.r3 .media-cards .media-card p {
-  font-size: 16px;
-}
-
-.r3 .sign-up form {
-  display: flex;
-  flex-direction: column;
-  margin: 25px 18vw;
-}
-.r3 .sign-up form input {
-  background: none;
-  padding: 12px 16px;
-  outline: none;
-  border: 1px solid #000;
-  border-radius: 15px;
-  font-size: 16px;
-  margin-bottom: 10px;
-}
-.r3 .sign-up form .sign-up-buttons {
-  display: flex;
-  flex-direction: column;
-  margin: 5px;
-}
-.r3 .sign-up form .sign-up-buttons button {
-  transition: 0.3s ease-in-out;
-  border-radius: 10px;
-  margin: 0 auto;
-  font-size: 15px;
-  cursor: pointer;
-}
-.r3 .sign-up form .sign-up-buttons button:nth-child(1) {
-  margin: 0 auto;
-  padding: 15px 40px;
-
-  border: none;
-  margin-bottom: 15px;
-}
-.r3 .sign-up form .sign-up-buttons button:nth-child(2) {
-  background: transparent;
-  border: 1px solid #7e1cfe;
-  padding: 15px 20px;
-}
-
-@media (min-width: 768px) {
-  .r1 {
-    display: flex;
-    height: 70vh;
-  }
-
-  .r1-c1 {
-    width: 60%;
-    background: #f8e8fe;
-    padding: 15px 50px;
-    text-align: left;
-  }
-
-  /* ... Add other tablet/desktop specific styles here */
+  letter-spacing: 0.5px;
 }
 
 @media (max-width: 768px) {
-  .r1 {
+  .home-page {
     flex-direction: column;
-    height: auto;
   }
-  .r1-c1,
-  .r1-c2 {
+  .left {
+    position: static;
     width: 100%;
-    background: #f8e8fe;
-    padding: 15px 30px;
   }
-  .r1-c1 h1 {
-    font-size: 20px;
+  .right {
+    margin-left: 0;
+    width: 100%;
   }
-  .r1-c1 h2,
-  .r1-c1 h3 {
-    font-size: 16px;
-  }
-  .r1-c1 .input-field {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    height: auto;
+  .header {
+    display: none;
   }
 
-  .r1-c1 .input-field h3 {
-    font-size: 16px;
-    font-weight: 500;
-    margin: 0;
-  }
-  .r1-c1 .input-field input {
+  .head {
+    position: fixed;
     width: 100%;
-    margin-bottom: 5px;
-    font-size: 16px;
+    background: #e6d9e8;
+    padding: 15px 15px;
+    display: flex;
+    flex-direction: column;
+    z-index: 1;
   }
-  .r1-c1 .buttons button {
-    padding: 10px 25px;
-    font-size: 14px;
-    margin-top: 40px;
+  .head .part-1 {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
   }
-  .r1-c1 .buttons button:nth-child(1),
-  .r3 .sign-up form .sign-up-buttons button:nth-child(1) {
-    margin-right: 0;
+  .head .part-1 .head-logo {
+    display: flex;
+    align-items: center;
   }
-  .r1-c1 .buttons button:nth-child(2),
-  .r3 .sign-up form .sign-up-buttons button:nth-child(2) {
-    margin-top: 12px;
+
+  .head .part-1 .head-logo img {
+    width: 75px;
   }
-  .r1-c2 img {
-    width: 70%;
+  .head .part-1 button {
+    width: 32px;
+    height: 32px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: none;
+    border: none;
   }
-  .r2 {
-    padding: 25px;
-    text-align: center;
+
+  .head .part-1 button #menu-icon {
+    width: 24px;
+    height: 24px;
   }
-  .r2 h1 {
-    margin-bottom: 20px;
-    font-size: 22px;
+  .head .part-1 button #dp-icon {
+    width: 30px;
+    height: 30px;
+    border-radius: 5px;
   }
-  .r2 iframe {
-    height: 25vh;
-    width: 80vw;
+
+  .head .part-2 {
+    padding-top: 15px;
+    display: flex;
+    justify-content: center;
   }
-  .r3 .cards {
-    margin: 20px 0 40px 0;
-    grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
-    grid-gap: 20px;
-    padding: 10px 20px;
+  .head .part-2 input {
+    border-radius: 5px;
+    width: 75%;
+    padding: 10px;
+    font-size: 12px;
+    border: none;
+    outline: none;
+    letter-spacing: 0.5px;
   }
-  .r3 .cards .card {
+  .body {
+    margin-top: 110px;
+  }
+  .row-1 {
     padding: 20px 15px;
   }
-  .r3 .cards .card:hover {
-    box-shadow: #c2a5e9 0px 0px 6px;
+  .row-1-r1 h1 {
+    font-size: 28px;
   }
-  .r3 .cards .card img {
-    width: 40px;
-    height: 40px;
+  .row-1-r1 select {
+    padding: 3px 6px;
+    font-size: 10px;
   }
-  .r3 .cards .card span {
-    font-size: 14px;
-    font-weight: 600;
+  .row-1-r2 {
+    margin: 0;
   }
-  .r3 .cards .card p {
-    font-size: 12px;
+  .row-1-r2-c1 {
+    width: 100%;
   }
-  .r3 .text,
-  .r3 .sign-up {
-    padding: 20px 80px;
+  .row-1-r2-c1 span {
+    font-size: 16px;
+    margin-top: 20px;
   }
-  .r3 .text h2,
-  .r3 .sign-up h2 {
+  .row-1-r2-c1 button {
+    display: none;
+  }
+  .row-1-r2-c2 {
+    display: none;
+  }
+  .row-2 {
+    margin: 5px 0;
+    gap: 8px;
+  }
+  .row-2 h2 {
     font-size: 18px;
   }
-  .r3 .text p {
-    font-size: 14px;
-    margin-bottom: 40px;
-    line-height: 1.5;
+  .row-2 p {
+    font-size: 15px;
   }
-  .r3 .media-cards {
-    grid-gap: 20px;
-    grid-template-columns: repeat(2, 1fr);
-    padding: 30px;
+
+  .row-3-row .cards {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(145px, 1fr));
+    grid-gap: 15px;
+    margin: 10px 0;
   }
-  .r3 .media-cards .media-card img {
-    height: auto;
+
+  .row-3-row .cards .card {
+    padding: 15px;
+    border-radius: 8px;
+    background: #fff;
+    box-shadow: rgba(0, 0, 0, 0.24) 3px 7px 8px;
+    transition: 0.3s ease-in-out;
   }
-  .r3 .media-cards .media-card span {
+
+  .row-3-row .cards .card:hover {
+    box-shadow: #7e1cfe 1px 1px 10px;
+  }
+
+  .row-3-row .cards .card .card-row-1 {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 10px;
+  }
+
+  .row-3-row .cards .card .card-row-2 span {
     font-size: 16px;
+    font-weight: 600;
+    line-height: 1.4;
   }
-  .r3 .media-cards .media-card p {
+
+  .row-3-row .cards .card .card-row-2 p {
     font-size: 14px;
-    line-height: 1.5;
-  }
-  .r3 .sign-up form {
-    margin: 25px -40px;
-  }
-  .r3 .sign-up form input {
-    padding: 10px 16px;
-    font-size: 14px;
-  }
-  .r3 .sign-up form .sign-up-buttons button {
-    font-size: 14px;
-  }
-  .r3 .sign-up form .sign-up-buttons button:nth-child(1) {
-    padding: 10px 20px;
-    margin: 0 auto;
-  }
-  .r3 .sign-up form .sign-up-buttons button:nth-child(2) {
-    padding: 10px 40px;
-    line-height: 1.5;
-    margin: 12px 40px;
+    letter-spacing: 0.5px;
+    margin-top: 5px;
   }
 }
